--- a/service.html
+++ b/service.html
@@ -25,7 +25,7 @@
     <li><a href="#">information</a></li>
 </ul>
     <script src="Projet.js"></script>
-    <script src="horloge.js"></script>  
+    <script src="script.js"></script>  
     <p id="stations"></p>
 </body>
 </html>
