--- a/projet.html
+++ b/projet.html
@@ -29,7 +29,7 @@
         <i class =  "fa fa-search "></i>   
     </div>
 </div>
-<script src="horloge.js"></script> 
+<script src="script.js"></script> 
 
 
     <!-- <p> être toujours informé à temps</p> -->
