--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h1> Travel time  </h1>
     <!-- <p>de vos transports en commun</p>
 </div> -->
-    
+     <script src="Projet.js"></script>
      <script src="script.js"></script> 
 </body>
 </html>
