avec lignes + sens + bas de page

--- a/projet.html
+++ b/projet.html
@@ -38,4 +38,21 @@
 </div> --> 
 
 </body>
+
+
+<footer>
+    <div class="pied">
+    <h3>APP DE TRANSPORT PUBLIC DE NANTES</h3>
+    <p>realisée par:</p>
+    <p>° Alissia</p>
+    <p>° Meghan</p>
+    <p>° Edward</p>
+    </div>
+    <div class="image"></div>
+    <a href="https://adatechschool.fr/"><img 
+        src="ada-tech-school.png" 
+        alt=" ada tech school" 
+        width="200" 
+        height="60"></a>
+</footer>
 </html>
