--- a/projet.html
+++ b/projet.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> add transport </title>
-    <link rel="stylesheet" href="projet.css">
+    <link rel="stylesheet" href="style.css"
     <link rel ="stylesheet" href=" https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,7 +41,7 @@
      integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
      crossorigin=""></script>
 <script src="script.js"></script> 
-<script src="projet.js"></script>
+<!-- <script src="projet.js"></script> -->
 
 
 
@@ -51,4 +51,20 @@
 </div> --> 
 
 </body>
+
+<footer>
+
+    <div class="pied">
+    <h3>APP DE TRANSPORT PUBLIC DE NANTES</h3>
+    <p>realisée par:</p>
+    <p>° Alissia</p>
+    <p>° Meghan</p>
+    <p>° Edward</p>
+    </div>
+   
+        <div class="image">
+            <a href="https://adatechschool.fr/"><img src="ada-tech-school.png" alt=" ada tech school" width="200" height="60"></a>
+        </div>
+</footer>
+
 </html>
