--- a/service.html
+++ b/service.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="projet.css">
-    <link rel ="stylesheet" href=" https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https : //fonts.googleapis.com/css2?family= Audiowide & family= Caramel & family= Monoton & family= Sacramento & display=swap" rel="stylesheet" >
@@ -25,14 +26,32 @@
     <li><a href="#">ligne</a></li>
     <li><a href="#">horaire</a></li>
     <li><a href="#">information</a></li>
+    
     <div class="heure">
         <span id="time"> 00 : 00 : 00</span>
     </div> 
 </ul>
-    <div id="map"></div>   
+    <div id="map"></div>
+    <p class="station" id="stations"></p>
+    <p class="stationF" id="stationDetails" hidden></p>
+    <!--  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+    integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" 
+    crossorigin=""></script>  -->
     <script src="Projet.js"></script>
     <script src="script.js"></script>  
-    <p id="stations"></p>
-    <p id="stationDetails" hidden></p>
+    
 </body>
+
+<footer>
+    <div class="pied">
+    <h3>APP DE TRANSPORT PUBLIC DE NANTES</h3>
+    <p>realisée par:</p>
+    <p>° Alissia</p>
+    <p>° Meghan</p>
+    <p>° Edward</p>
+    </div>
+        <div class="image">
+            <a href="https://adatechschool.fr/"><img src="ada-tech-school.png" alt=" ada tech school" width="200" height="60"></a>
+        </div>
+</footer>
 </html>
