avec html horaires

--- a/projet.html
+++ b/projet.html
@@ -11,18 +11,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https : //fonts.googleapis.com/css2?family= Audiowide & family= Caramel & family= Monoton & family= Sacramento & display=swap" rel="stylesheet" >
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
-     integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
-     crossorigin=""/>
+    integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+    crossorigin=""/>
 
 </head>
 
 <body>
 
 <ul class = "menu">
-    <li><a href="service.html">service</a></li>
-    <li><a href="#">ligne</a></li>
-    <li><a href="#">horaire</a></li>
-    <li><a href="#">information</a></li>
+    <li><a href="service.html">services</a></li>
+    <li><a href="#">lignes</a></li>
+    <li><a href="horaires.html">horaires</a></li>
+    <li><a href="#">informations</a></li>
     <div class="heure">
         <span id="time"> 00 : 00 : 00</span>
     </div>
@@ -35,11 +35,6 @@
         </div>
     </div>
 
-    <div id="map"></div>
-
-<script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
-     integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
-     crossorigin=""></script>
 <script src="script.js"></script> 
 <script src="projet.js"></script>
 
