--- a/service.html
+++ b/service.html
@@ -21,18 +21,20 @@
 <body>
 
 <ul class = "menu">
-    <li><a href="service.html">service</a></li>
-    <li><a href="#">ligne</a></li>
-    <li><a href="#">horaire</a></li>
-    <li><a href="#">information</a></li>
+    <li><a href="service.html">services</a></li>
+    <li><a href="#">lignes</a></li>
+    <li><a href="horaires.html">horaires</a></li>
+    <li><a href="#">informations</a></li>
     <div class="heure">
         <span id="time"> 00 : 00 : 00</span>
     </div> 
 </ul>
-    <div id="map"></div>   
-    <script src="Projet.js"></script>
-    <script src="script.js"></script>  
-    <p id="stations"></p>
-    <p id="stationDetails" hidden></p>
+    <div class="pageBody">
+        <div id="map"></div>  
+        <script src="Projet.js"></script>
+        <script src="script.js"></script> 
+        <p id="stations"></p>
+        <p id="stationDetails" hidden></p>
+    </div>
 </body>
 </html>
