--- a/horaires.html
+++ b/horaires.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> horaires </title>
-    <link rel="stylesheet" href="projet.css">
+    <link rel="stylesheet" href="style.css">
     <link rel ="stylesheet" href=" https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,21 +13,21 @@
     <script src="https://cdn.plot.ly/plotly-2.18.2.min.js"></script>
 </head>
 <body>
-    <ul class = "menu">
-        <li><a href="service.html">services</a></li>
-        <li><a href="#">lignes</a></li>
-        <li><a href="horaires.html">horaires</a></li>
-        <li><a href="#">informations</a></li>
-        <div class="heure">
-        <span id="time"> 00 : 00 : 00</span>
-        </div> 
-    </ul>
     <div class="pageBody">
+        <ul class = "menu">
+            <li><a href="service.html">services</a></li>
+            <li><a href="#">lignes</a></li>
+            <li><a href="horaires.html">horaires</a></li>
+            <li><a href="#">informations</a></li>
+            <div class="heure">
+            <span id="time"> 00 : 00 : 00</span>
+            </div> 
+        </ul>
         <div id="myDiv"></div>
         <div id="horairesText"></div>
     </div>
+
     <script src="script.js"></script>
     <script src="horaires.js"></script>
-
 </body>
 </html>
